[tool.poetry]
name = "imbue"
version = "2.1.2"
description = "Type based python dependency injection framework."
authors = ["Gabriel Pajot <gab@lescactus.eu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gpajot/imbue"
include = ["imbue/py.typed"]

[tool.poetry.dependencies]
python = ">=3.9"

fastapi = { version = ">=0.112.1,<2", optional = true }

[tool.poetry.extras]
fastapi = ["fastapi"]

[tool.poetry.group.test.dependencies]
httpx = "==0.28.1"
pytest = "==8.4.1"
pytest-asyncio = "==1.1.0"
pytest-mock = "==3.14.1"
ruff = "==0.12.3"
mypy = "==1.17.0"
pre-commit = "==4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
install_types = true
non_interactive = true
check_untyped_defs = true

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "PT"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
